DoAn/Jenkins/monitoring/pod-debug.yaml
apiVersion: v1
kind: Pod
metadata:
  name: debug-pod
  namespace: monitoring 
  labels:
    app: debug

spec:
  containers:
  - name: debug-container
    image: nicolaka/netshoot:latest
    stdin: true
    tty: true
